--- a/01.Tools/index.html
+++ b/01.Tools/index.html
@@ -52,8 +52,8 @@
     </form>
 
     <p>
-        <small>02021, Rogier van der Linde</small>
+        <small>&copy;2021, Rogier van der Linde</small>
     </p>
-    
+
 </body>
 </html>
