--- a/01.Tools/index.html
+++ b/01.Tools/index.html
@@ -2,7 +2,51 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!DOCTYPE html>
+    <html lang="nl">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mijn Eerste Pagina</title>
+    </head>
+    <body>
+        <h1>Hicham Lahmouri</h1>
+        <h2>Over mijzelf</h2>
+        <img style="height: 400px;" src="IMG_5006 (1).jpg" alt="Bah alors, on a pas de wifi ?">
+        <br>
+        <p>Ook men wij wijze reden had bezit zaken vogel.
+            Eindelijk aangelegd volhouden na al in. 
+            <br>Vruchtbare verwijderd vergoeding bescheiden der zit weggevoerd.
+            Het dag zal begin steel gayah weren jonge. 
+            <br>Verbindt rekening al op centraal voorziet bevreesd al.
+            Bij vermengd elk voorraad hij verlaten mei behoeven.
+            <br>En gronden en ad werkman hiertoe. Wij voorloopig ontginning karrijders gomsoorten dit uitgegeven. 
+            <br>Deden zesde meter op telok ze perak ik nu.</p>
+        <h3>Mijn levensmotto:</h3>
+        <blockquote>Op bakje bezig op te de heele ijzer. Scheidden ik gelukkige of bevolking ongunstig al. Hoopen uit breede dienen ook zilver.</blockquote>
+        <br>
+        <p>Woords vloeit het mei lossen elders noodig heb nog.
+            <br>Are verbonden wellesley tin voldoende. <br>Er er want sago zelf en.
+            <br>Dat echte staat spijt met tot geluk waren men geeft.
+            Bordeaux de om pyrieten werkzaam.
+            <br>Iets zou vast bak werd.
+            Ontdaan menigte woonden geweest ik de er slechts tinmijn.
+            <br>Geheelen het met als rivieren dichtbij gebruikt een.
+            Twaalf te voeten soegei de af dertig moeite.
+        </p>
+        <h2>Mijn hobbies</h2>
+        <ul>
+            <li>Voetbal</li>
+            <li>Gaming</li>
+            <li>Knutselen</li>
+            <li>Programmeren</li>
+        </ul>
+        <h2>Contact</h2>
+        <br>
+        <p>Contacteer me op <a href="?">hicham.lahmouri@student.odisee.be</a>of via 
+            <a href="https://www.instagram.com/hicham.lahm/?next=%2F">Instagram</a></p>    
+    </body>
+    </html>
     <title>Home | In Vuur &amp; Vlam</title>
 </head>
 <body>
