--- a/02.HTMLBasis/FilmsVanDeWeek/index.html
+++ b/02.HTMLBasis/FilmsVanDeWeek/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="nl">
-<title>Films Van De Week</title>
-<head><link rel="stylesheet" href="styles.css"></head>
+<html lang="en">
+<link rel="stylesheet" href="styles.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FilmsVanDeWeek</title>
+</head>
 
 <body>
     <table>
+        <caption>Films deze week</caption>
         <thead>
-            <tr>
-                <th>Films van de week</th>
-            </tr>
-        </thead>
         <tbody>
-            <tr>
+             <tr>
                 <td></td>
                 <td></td>
                 <td>ma</td>
@@ -22,19 +23,22 @@
                 <td>za</td>
                 <td>zo</td>
             </tr>
+            </thead>
+
+        <tbody>
             <tr>
-                <td><img src="img/wijzer_12.png"></img></td>
-                <td>Dunne</td>
-                <td>20u00</td>
-                <td></td>
-                <td>19u30</td>
-                <td>16u30</td>
-                <td></td>
-                <td>20u00</td>
-                <td>20u00</td>
+            <td><img src="img/wijzer_12.png" alt="wijzer_12"></img></td>
+            <td>Dunne</td>
+            <td>20u00</td>
+            <td></td>
+            <td>19u30</td>
+            <td>16u30</td>
+            <td></td>
+            <td>20u00</td>
+            <td>20u00</td>
             </tr>
             <tr>
-                <td><img src="img/wijzer_6.png"></img></td>
+                <td><img src="img/wijzer_6.png" alt="wijzer_6"></img></td>
                 <td>De Magische Poort</td>
                 <td></td>
                 <td></td>
@@ -44,7 +48,7 @@
                 <td>16u00</td>
             </tr>
             <tr>
-                <td><img src="img/wijzer_12.png"></img></td>
+                <td><img src="img/wijzer_12.png" alt="wijzer_12"></img></td>
                 <td>Oppenheimer</td>
                 <td>19u00</td>
                 <td>19u00</td>
@@ -53,7 +57,7 @@
                 <td>18u30</td>
             </tr>
             <tr>
-                <td><img src="img/wijzer_14.png"></img></td>
+                <td><img src="img/wijzer_14.png" alt="wijzer_14"></img></td>
                 <td>After We Fall</td>
                 <td>19u00</td>
                 <td>19u00</td>
@@ -62,7 +66,7 @@
                 <td>18u30</td>
             </tr>
             <tr>
-                <td><img src="img/wijzer_16.png"></img></td>
+                <td><img src="img/wijzer_16.png" alt="wijzer_16"></img></td>
                 <td>Benedetta</td>
                 <td></td>
                 <td></td>
@@ -71,7 +75,7 @@
                 <td>16u00</td>
             </tr>
             <tr>
-                <td><img src="img/wijzer_al.png"></img></td>
+                <td><img src="img/wijzer_al.png" alt="wijzer_al"></img></td>
                 <td>Supernova</td>
                 <td>20u00</td>
                 <td></td>
