--- a/02.HTMLBasis/FilmsVanDeWeek/index.html
+++ b/02.HTMLBasis/FilmsVanDeWeek/index.html
@@ -1,93 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<link rel="stylesheet" href="styles.css">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FilmsVanDeWeek</title>
+    <title>Films van de week</title>
 </head>
 
 <body>
-    <table>
-        <caption>Films deze week</caption>
-        <thead>
-        <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td>ma</td>
-                <td>di</td>
-                <td>woe</td>
-                <td>do</td>
-                <td>vr</td>
-                <td>za</td>
-                <td>zo</td>
-            </tr>
-            </thead>
-
-        <tbody>
-            <tr>
-                <td><img src="img/wijzer_12.png" alt="wijzer_12"></img></td>
-                <td>Dunne</td>
-                <td>20u00</td>
-                <td></td>
-                <td>19u30</td>
-                <td>16u30</td>
-                <td></td>
-                <td>20u00</td>
-                <td>20u00</td>
-            </tr>
-            <tr>
-                <td><img src="img/wijzer_6.png" alt="wijzer_6"></img></td>
-                <td>De Magische Poort</td>
-                <td></td>
-                <td></td>
-                <td>14u00</td>
-                <td>14u00</td>
-                <td></td>
-                <td>16u00</td>
-            </tr>
-            <tr>
-                <td><img src="img/wijzer_12.png" alt="wijzer_12"></img></td>
-                <td>Oppenheimer</td>
-                <td>19u00</td>
-                <td>19u00</td>
-                <td>19u00</td>
-                <td>18u30</td>
-                <td>18u30</td>
-            </tr>
-            <tr>
-                <td><img src="img/wijzer_14.png" alt="wijzer_14"></img></td>
-                <td>After We Fall</td>
-                <td>19u00</td>
-                <td>19u00</td>
-                <td>19u00</td>
-                <td>18u30</td>
-                <td>18u30</td>
-            </tr>
-            <tr>
-                <td><img src="img/wijzer_16.png" alt="wijzer_16"></img></td>
-                <td>Benedetta</td>
-                <td></td>
-                <td></td>
-                <td>14u00</td>
-                <td>14u00</td>
-                <td>16u00</td>
-            </tr>
-            <tr>
-                <td><img src="img/wijzer_al.png" alt="wijzer_al"></img></td>
-                <td>Supernova</td>
-                <td>20u00</td>
-                <td></td>
-                <td>19u30</td>
-                <td>16u30</td>
-                <td></td>
-                <td>20u00</td>
-                <td>20u00</td>
-            </tr>
-        </tbody>
-    </table>
+    <tr>ou</tr>
 </body>
 
 </html>
