--- a/03.HTMLMedia/TimmerWerkt1/over.html
+++ b/03.HTMLMedia/TimmerWerkt1/over.html
@@ -78,7 +78,7 @@
     <a href="">neem contact op</a>
     <img src="images/home/homesection3.jpg" alt="">
     <img src="images/kleurenstrip.png" alt="Kleurenstrip">
-    <h3>De Timmerwerkt nieuwsbrief</h3>
+    <h2>De Timmerwerkt nieuwsbrief</h2>
     <p>
         Wil je graag op de hoogte blijven over Timmerwerkt? We houden zelf niet van spam, dus het zal maar voor héél af
         en toe zijn.
@@ -99,10 +99,10 @@
     </address>
 
     <ul>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Facebook </a></li>
-        <li><a href="">Youtube</a></li>
-        <li><a href="">Pintrest </a></li>
+        <li><a href="www.instagram.com">Instagram</a></li>
+        <li><a href="www.facebook.com">Facebook </a></li>
+        <li><a href="www.youtube.com">Youtube</a></li>
+        <li><a href="www.pinterest.com">Pintrest </a></li>
     </ul>
 </body>
 
