--- a/04.HTMLFormulieren/TimmerWerkt2/contact.html
+++ b/04.HTMLFormulieren/TimmerWerkt2/contact.html
@@ -48,13 +48,14 @@
         <input type="tel">
         <br><br>
         <label><input type="checkbox">ja, schrijf mij in voor de nieuwsbrief</label>
+        <br>
         <input type="submit" value="Versturen">
     </form>
     <h2>De Timmerwerkt nieuwsbrief</h2>
     <p>Wil je graag op de hoogte blijven over Timmerwerkt? We houden zelf niet van spam,
         dus het zal maar voor héél af en toe zijn.</p>
     <form>
-        <input type="email" name="email adres" placeholder="email adres" autofocus>
+        <input type="email" name="email adres" placeholder="Email adres" autofocus>
         <a href="">Inschrijven</a>
     </form>
     <p>TIMMERWERKT VZW
