--- a/04.HTMLFormulieren/TimmerWerkt2/contact.html
+++ b/04.HTMLFormulieren/TimmerWerkt2/contact.html
@@ -34,7 +34,7 @@
 
     <form>
         <p>Je vraag *</p>
-        <textarea cols="50" rows="10"></textarea>
+        <textarea cols="50" rows="10" autofocus></textarea>
         <p>Verduidelijk eventueel met enkele foto's</p>
         <input type="file" id="photo">
         <p>Adres of regio *</p>
@@ -55,7 +55,7 @@
     <p>Wil je graag op de hoogte blijven over Timmerwerkt? We houden zelf niet van spam,
         dus het zal maar voor héél af en toe zijn.</p>
     <form>
-        <input type="email" name="email adres" placeholder="Email adres" autofocus>
+        <input type="email" name="email adres" placeholder="Email adres">
         <a href="">Inschrijven</a>
     </form>
     <p>TIMMERWERKT VZW
