--- a/04.HTMLFormulieren/TimmerWerkt2/contact.html
+++ b/04.HTMLFormulieren/TimmerWerkt2/contact.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="">wat</a></li>
-        <li><a href="">hoe</a></li>
+        <li><a href="hoe.html">hoe</a></li>
         <li><a href="over.html">over</a></li>
         <li><a href="">podcast</a></li>
         <li><a href="contact.html">contact</a></li>
