--- a/05.HTMLStructureren/TimmerWerkt3/index.html
+++ b/05.HTMLStructureren/TimmerWerkt3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="fonts/fontawesome-free/css/all.css"/>
     <title>Hoe | Timmerwerkt</title>
 </head>
 
@@ -128,7 +128,7 @@
         </div>
         <div>
             <form>
-                <input type="email" placeholder="e-mail adres">
+                <input type="email" placeholder="e-mail adres" required>
                 <input type="submit" value="INSCHRIJVEN">
             </form>
         </div>
@@ -141,6 +141,15 @@
             <a href="">+32 456 61 85 05</a>
             <a href="https://www.facebook.com">
                 <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.pinterest.com">
+                <i class="fa-brands fa-pinterest"></i>
+            </a>
+            <a href="https://www.youtube.com">
+                <i class="fa-brands fa-youtube"></i>
             </a>
         </div>
     </footer>
