--- a/05.HTMLStructureren/TimmerWerkt3/index.html
+++ b/05.HTMLStructureren/TimmerWerkt3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="fonts/fontawesome-free/css/all.css"/>
+    <link rel="stylesheet" href="fonts/fontawesome-free/css/all.css">
     <title>Hoe | Timmerwerkt</title>
 </head>
 
@@ -24,7 +24,7 @@
             </div>
         </nav>
         <div>
-            <h2>Hoe Timmerwerkt werkt</h2>
+            <h1>Hoe Timmerwerkt werkt</h1>
         </div>
     </header>
     <main>
