--- a/06.CSSSyntax/CssButtons/index.html
+++ b/06.CSSSyntax/CssButtons/index.html
@@ -18,7 +18,10 @@
    <p><a href="" class="btnFav">♥</a></p>
 
    <h2>button tiktok</h2>
-   <p><a href="" class="btnTiktok">bekijk op TikTok</a></p>
+   <div class="btnTiktok">
+      <img src="logo-tiktok.png" alt="logo-tiktok">
+      <span>bekijk op Tiktok</span>
+   </div>
 
 </body>
 
