--- a/06.CSSSyntax/CssButtons/index.html
+++ b/06.CSSSyntax/CssButtons/index.html
@@ -12,15 +12,19 @@
    <h1>CSS Buttons</h1>
 
    <h2>button groen</h2>
-   <p><a href="" class="btnGreen">meer over ons</a></p>
+   <div>
+      <p><a href="" class="btnGreen">meer over ons</a></p>
+   </div>
 
    <h2>button favoriet</h2>
-   <p><a href="" class="btnFav">♥</a></p>
+   <div>
+      <p><a href="" class="btnFav">♥</a></p>
+   </div>
 
    <h2>button tiktok</h2>
    <div class="btnTiktok">
       <img src="logo-tiktok.png" alt="logo-tiktok">
-      <span>bekijk op Tiktok</span>
+      <p><a href="tiktok.com">bekijk op tiktok</a></p>
    </div>
 
 </body>
