--- a/06.CSSSyntax/CssMenus/index.html
+++ b/06.CSSSyntax/CssMenus/index.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>CSS Menus</title>
    <link rel="stylesheet" href="fonts/fontawesome/css/all.css">
+   <link rel="stylesheet" href="fonts/fontawesome/css/styles.css">
 </head>
 
 <body>
