--- a/07.CSSDesign/AcalliaOpmaak/index.html
+++ b/07.CSSDesign/AcalliaOpmaak/index.html
@@ -21,6 +21,7 @@
       </nav>
    </header>
    <div id="banner">
+      <img class="bannerImg" src="img/banner.jpg" alt="banner image">
       <p>
          Pepper jack macaroni cheese babybel. Cheeseburger squirty cheese caerphilly cheese pepper jack macaroni cheese melted cheese stilton cheese. Everyone loves swiss stinking bishop swiss mascarpone who moved my cheese cheese.
       </p>
