--- a/EP3/index.html
+++ b/EP3/index.html
@@ -4,36 +4,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Playwrite+DK+Uloopet:wght@100..400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>MEJ Benin</title>
 </head>
 
 <body>
     <header>
-        <div><img src="img/logo.png" alt="logo MEJ"></div>
-        <div>
-            <span>suivez-nous:</span>
-            <p>
-                <a href=""><span ></span></a>
-                <a href=""></a>
-                <a href=""></a>
-            </p>
-        </div>
-        <div><input type="search" placeholder="rechercher"></div>
-        <div>
-            <ul>
-                <li>accueil</li>
-                <li>mission</li>
-                <li>actualités</li>
-                <li>contacte</li>
-            </ul>
+        <div><a href="index.html"><img class="logo" src="img/logo.png" alt="logo MEJ"></a></div>
+        <div class="menu-social">
+            <div class="social">
+                <p>
+                    <span>suivez-nous:</span>
+                    <a href="https://www.facebook.com/p/MEJ-BENIN-100084518404105/"><span
+                            class="fa fa-facebook"></span></a>
+                    <a href=""><span class="fa fa-instagram"></span></a>
+                    <a href=""><span class="fa fa-whatsapp"></span></a>
+                </p>
+            </div>
+            <div class="search"><input type="search" placeholder="rechercher"></div>
+            <div class="menu">
+                <ul>
+                    <li><a class="accueil" href="index.html">accueil</a></li>
+                    <li><a class="mission" href="">mission</a></li>
+                    <li><a class="actualités" href="actualite.html">actualités</a></li>
+                    <li><a class="contacte" href="contact.html">contacte</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
-
+        <h1>Notre mission</h1>
+        <div>
+            <div class="mission-p">
+                <p>
+                    Lorem ipsum odor amet, consectetuer adipiscing elit. Odio congue faucibus sem potenti felis maecenas
+                    phasellus. Tellus litora nostra; justo vel faucibus feugiat. Congue rhoncus curae habitant nam
+                    vestibulum scelerisque conubia pulvinar. Duis maximus potenti turpis potenti mauris tempus morbi.
+                    Aliquet non dolor elit urna vivamus. Consequat curabitur conubia gravida habitant, est platea.
+                    Finibus eget mattis felis lacus; libero nisl consectetur cras. Pharetra ipsum bibendum amet
+                    venenatis nunc purus tempus. Amet torquent amet ligula ullamcorper adipiscing quam ridiculus
+                    dignissim non. Bibendum lorem elementum aliquet consequat parturient lacus phasellus tempor. Urna
+                    sapien finibus imperdiet; finibus feugiat semper. Montes vel magna lectus id fermentum a commodo ut.
+                </p>
+            </div>
+            <div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <h1>Actualités</h1>
+        <h1>Question, suggestion...?</h1>
     </main>
     <footer>
-
+        <div class="copyright">
+            <div>
+                <p>@copyright MEJ Benin - 2024</p>
+            </div>
+            <div><a href="#">mentions légales et gestions des cookies</a></div>
+        </div>
     </footer>
 </body>
 
