--- a/EP3/index.html
+++ b/EP3/index.html
@@ -33,7 +33,7 @@
                     <li><a class="accueil" href="index.html">accueil</a></li>
                     <li><a class="mission" href="">mission</a></li>
                     <li><a class="actualités" href="actualite.html">actualités</a></li>
-                    <li><a class="contacte" href="contact.html">contacte</a></li>
+                    <li><a class="contacte" href="contact.html">contact</a></li>
                 </ul>
             </div>
         </div>
@@ -47,21 +47,41 @@
                     phasellus. Tellus litora nostra; justo vel faucibus feugiat. Congue rhoncus curae habitant nam
                     vestibulum scelerisque conubia pulvinar. Duis maximus potenti turpis potenti mauris tempus morbi.
                     Aliquet non dolor elit urna vivamus. Consequat curabitur conubia gravida habitant, est platea.
-                    Finibus eget mattis felis lacus; libero nisl consectetur cras. Pharetra ipsum bibendum amet
-                    venenatis nunc purus tempus. Amet torquent amet ligula ullamcorper adipiscing quam ridiculus
-                    dignissim non. Bibendum lorem elementum aliquet consequat parturient lacus phasellus tempor. Urna
-                    sapien finibus imperdiet; finibus feugiat semper. Montes vel magna lectus id fermentum a commodo ut.
+                    Finibus eget mattis felis lacus; libero nisl consectetur cras.
                 </p>
             </div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="img-container">
+                <div class="img">
+                    <img src="img/mission1.jpg" alt="mission1">
+                    <p>Mej Benin, pour l'enfance et la jeunesse !</p>
+                </div>
+                <div class="img">
+                    <img src="img/mission2.jpg" alt="mission2">
+                    <p>Pour reveler les talents artistiques et culturels parmi les enfants et les jeunes</p>
+                </div>
+                <div class="img">
+                    <img src="img/mission3.jpg" alt="mission3">
+                    <p>Pour un environnement sain et une citoyenneté solidaire</p>
+                </div>
+                <div class="img">
+                    <img src="img/mission4.jpg" alt="mission4">
+                    <p>Pour l'aide et le soutien dans la vie des enfants et des jeunes</p>
+                </div>
+                <div class="img">
+                    <img src="img/mission5.jpg" alt="mission5">
+                    <p>Pour le vivre-ensemble à travers nos sejours interculturels</p>
+                </div>
+                <div class="img">
+                    <img src="img/mission6.jpg" alt="mission6">
+                    <p>Pour l'amelioration des conditions de vie des enfants vulnerables</p>
+                </div>
+                <div class="img">
+                    <img src="img/mission7.jpg" alt="mission7">
+                    <p>Pour l'autonomisation et l'emancipation de la femme</p>
+                </div>
+                <div class="readmore">
+                    <a href="#">Lisez plus sur notre mission »</a>
+                </div>
             </div>
         </div>
         <h1>Actualités</h1>
