--- a/EP3/contact.html
+++ b/EP3/contact.html
@@ -32,7 +32,7 @@
                     <li><a class="accueil" href="index.html">accueil</a></li>
                     <li><a class="mission" href="">mission</a></li>
                     <li><a class="actualités" href="actualite.html">actualités</a></li>
-                    <li><a class="contacte" href="contact.html">contacte</a></li>
+                    <li><a class="contacte" href="contact.html">contact</a></li>
                 </ul>
             </div>
         </div>
