--- a/EP3/index.html
+++ b/EP3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -85,6 +85,57 @@
             </div>
         </div>
         <h1>Actualités</h1>
+        <p class="actu-p">Lorem ipsum odor amet, consectetuer adipiscing elit. Odio congue faucibus sem potenti felis
+            maecenas
+            phasellus. Tellus litora nostra; justo vel faucibus feugiat. Congue rhoncus curae habitant nam
+            vestibulum scelerisque conubia pulvinar. Duis maximus potenti turpis potenti mauris tempus morbi.
+            Aliquet non dolor elit urna vivamus. Consequat curabitur conubia gravida habitant, est platea.
+            Finibus eget mattis felis lacus; libero nisl consectetur cras.</p>
+        <div class="articles">
+            <div class="banners">
+                <img src="img/visual.jpg" alt="">
+                <div>
+                    <p class="date">16 mai 2024</p>
+                </div>
+                <div class="art-text">
+                    <p>on acquiert de droits aux respects de ses voisins Les jardins de M de Rênal remplis de murs sont
+                        encore admirés parce qu’il a acheté</p>
+                </div>
+                <div class="img-read">
+                    <i class="fa fa-image"></i>
+                    <a href="#">lire plus »</a>
+                </div>
+            </div>
+            <div class="banners">
+                <img src="img/banner1.jpg" alt="">
+                <div>
+                    <p class="date">16 mai 2024</p>
+                </div>
+                <div class="art-text">
+                    <p>on acquiert de droits aux respects de ses voisins Les jardins de M de Rênal remplis de murs sont
+                        encore admirés parce qu’il a acheté</p>
+                </div>
+                <div class="img-read">
+                    <i class="fa fa-image"></i>
+                    <a href="#">lire plus »</a>
+                </div>
+            </div>
+            <div class="banners">
+                <img src="img/banner2.jpg" alt="">
+                <div>
+                    <p class="date">16 mai 2024</p>
+                </div>
+                <div class="art-text">
+                    <p>on acquiert de droits aux respects de ses voisins Les jardins de M de Rênal remplis de murs sont
+                        encore admirés parce qu’il a acheté</p>
+                </div>
+                <div class="img-read">
+                    <i class="fa fa-image"></i>
+                    <a href="#">lire plus »</a>
+                </div>
+            </div>
+        </div>
+        <div class="more-actu"><a href="#">Toutes actualités »</a></div>
         <h1>Question, suggestion...?</h1>
     </main>
     <footer>
