--- a/EP3/index.html
+++ b/EP3/index.html
@@ -43,11 +43,11 @@
         <div>
             <div class="mission-p">
                 <p>
-                    Lorem ipsum odor amet, consectetuer adipiscing elit. Odio congue faucibus sem potenti felis maecenas
-                    phasellus. Tellus litora nostra; justo vel faucibus feugiat. Congue rhoncus curae habitant nam
-                    vestibulum scelerisque conubia pulvinar. Duis maximus potenti turpis potenti mauris tempus morbi.
-                    Aliquet non dolor elit urna vivamus. Consequat curabitur conubia gravida habitant, est platea.
-                    Finibus eget mattis felis lacus; libero nisl consectetur cras.
+                    Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde un
+                    bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
+                    omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci,
+                    le client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la
+                    vallée veut la sauce.
                 </p>
             </div>
             <div class="img-container">
@@ -85,12 +85,11 @@
             </div>
         </div>
         <h1>Actualités</h1>
-        <p class="actu-p">Lorem ipsum odor amet, consectetuer adipiscing elit. Odio congue faucibus sem potenti felis
-            maecenas
-            phasellus. Tellus litora nostra; justo vel faucibus feugiat. Congue rhoncus curae habitant nam
-            vestibulum scelerisque conubia pulvinar. Duis maximus potenti turpis potenti mauris tempus morbi.
-            Aliquet non dolor elit urna vivamus. Consequat curabitur conubia gravida habitant, est platea.
-            Finibus eget mattis felis lacus; libero nisl consectetur cras.</p>
+        <p class="actu-p">Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+            un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
+            omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci, le
+            client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée veut
+            la sauce.</p>
         <div class="articles">
             <div class="banners">
                 <img src="img/visual.jpg" alt="">
@@ -136,7 +135,80 @@
             </div>
         </div>
         <div class="more-actu"><a href="#">Toutes actualités »</a></div>
-        <h1>Question, suggestion...?</h1>
+        <div class="support">
+            <div>
+                <h1>Question, suggestion...?</h1>
+                <form class="contact-form">
+                    <div class="form-group">
+                        <p>Votre question ou suggestion</p>
+                        <label for="message">Message*</label>
+                        <textarea id="message" name="message" placeholder="Message *" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="file">Pièces jointes... (optionnel)</label>
+                        <input type="file" id="file" name="file">
+                    </div>
+                    <div class="form-group">
+                        <label>Vos coordonnées, qu'on puisse vous contacter</label>
+                        <div class="name-fields">
+                            <input type="text" id="firstname" name="firstname" placeholder="Nom *" required>
+                            <input type="text" id="lastname" name="lastname" placeholder="Prénom *" required>
+                        </div>
+                        <input type="email" id="email" name="email" placeholder="Addresse émail *" required>
+                        <input type="tel" id="phone" name="phone" placeholder="Numéro GSM">
+                    </div>
+                    <div class="form-group">
+                        <input type="checkbox" id="terms" name="terms" required>
+                        <label for="terms">J'ai lu et accepte les conditions</label>
+                    </div>
+                    <button type="submit" class="submit-btn">Soumettre</button>
+                </form>
+            </div>
+            <div class="support-don">
+                <div class="wp-don">
+                    <h2>Supportez-nous</h2>
+                    <p class="sup-p">Morbi mais qui veut vendre une couche de contenu triste d'internet. Être ivre
+                        maintenant</p>
+                    <p>Choisissez votre fréquence de don</p>
+                    <div class="times">
+                        <ul>
+                            <li>une fois</li>
+                            <li>mensuel</li>
+                            <li>annuel</li>
+                        </ul>
+                    </div>
+                    <p>Combien voulez-vous donner</p>
+                    <div class="price">
+                        <ul>
+                            <li>$5</li>
+                            <li>$10</li>
+                            <li>$25</li>
+                            <li>$100</li>
+                        </ul>
+                    </div>
+                    <p>Choisissez votre méthode de paiement</p>
+                    <div class="payment">
+                        <p class="pay">Paypal</p>
+                        <img class="paypal" src="img/paypal.png" alt="">
+                        <p class="pay">Stripe</p>
+                        <p class="pay">Carte de crédit</p>
+                    </div>
+                    <button type="button">donner</button>
+                </div>
+                <div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="social">
+            <p>
+                <span>suivez-nous:</span>
+                <a href="https://www.facebook.com/p/MEJ-BENIN-100084518404105/"><span class="fa fa-facebook"></span></a>
+                <a href=""><span class="fa fa-instagram"></span></a>
+                <a href=""><span class="fa fa-whatsapp"></span></a>
+            </p>
+        </div>
     </main>
     <footer>
         <div class="copyright">
