--- a/EP3/actualite.html
+++ b/EP3/actualite.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Playwrite+DK+Uloopet:wght@100..400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Playwrite+DK+Uloopet:wght@100..400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/actualite.css">
@@ -38,11 +39,72 @@
         </div>
     </header>
     <main>
-
+        <div class="banner"></div>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="actualite.html">Actualités</a></li>
+            <li>Visite de travail a MEJ Benin</li>
+        </ul>
+        <section class="text">
+            <h1>VISITE DE TRAVAIL A MEJ BENIN</h1>
+            <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
+                omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci, le
+                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
+                veut
+                la sauce.</p>
+            <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
+                omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci, le
+                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
+                veut
+                la sauce. Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
+                omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci, le
+                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
+                veut
+                la sauce.</p>
+            <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
+                omelette quelque.</p>
+            <p>Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
+                omelette.</p>
+            <p>Car et aussi car disruptif évidemment. Le client est très important merci, le
+                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
+                veut
+                la sauce. Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde
+                un bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
+                omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci, le
+                client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la vallée
+                veut
+                la sauce.</p>
+            <div class="images">
+                <img src="img/photo1.jpg" alt="">
+                <img src="img/photo2.jpg" alt="">
+                <img src="img/photo3.jpg" alt="">
+                <img src="img/photo4.jpg" alt="">
+                <img src="img/photo5.jpg" alt="">
+            </div>
+            <div>
+                <p><a href="actualite.html">Retour aux actualités</a></p>
+            </div>
+        </section>
+        <aside>
+            <div>
+                <h2>Articles similaires</h2>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </aside>
     </main>
     <footer>
         <div class="copyright">
-            <div><p>@copyright MEJ Benin - 2024</p></div>
+            <div>
+                <p>@copyright MEJ Benin - 2024</p>
+            </div>
             <div><a href="#">mentions légales et gestions des cookies</a></div>
         </div>
     </footer>
