--- a/EP3/contact.html
+++ b/EP3/contact.html
@@ -38,7 +38,80 @@
         </div>
     </header>
     <main>
+        <div class="support">
+            <div>
+                <h1>Question, suggestion...?</h1>
+                <form class="contact-form">
+                    <div class="form-group">
+                        <p>Votre question ou suggestion</p>
+                        <label for="message">Message*</label>
+                        <textarea id="message" name="message" placeholder="Message *" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="file">Pièces jointes... (optionnel)</label>
+                        <input type="file" id="file" name="file">
+                    </div>
+                    <div class="form-group">
+                        <label>Vos coordonnées, qu'on puisse vous contacter</label>
+                        <div class="name-fields">
+                            <input type="text" id="firstname" name="firstname" placeholder="Nom *" required>
+                            <input type="text" id="lastname" name="lastname" placeholder="Prénom *" required>
+                        </div>
+                        <input type="email" id="email" name="email" placeholder="Addresse émail *" required>
+                        <input type="tel" id="phone" name="phone" placeholder="Numéro GSM">
+                    </div>
+                    <div class="form-group">
+                        <input type="checkbox" id="terms" name="terms" required>
+                        <label for="terms">J'ai lu et accepte les conditions</label>
+                    </div>
+                    <button type="submit" class="submit-btn">Soumettre</button>
+                </form>
+            </div>
+            <div class="support-don">
+                <div class="wp-don">
+                    <h2>Supportez-nous</h2>
+                    <p class="sup-p">Morbi mais qui veut vendre une couche de contenu triste d'internet. Être ivre
+                        maintenant</p>
+                    <p>Choisissez votre fréquence de don</p>
+                    <div class="times">
+                        <ul>
+                            <li>une fois</li>
+                            <li>mensuel</li>
+                            <li>annuel</li>
+                        </ul>
+                    </div>
+                    <p>Combien voulez-vous donner</p>
+                    <div class="price">
+                        <ul>
+                            <li>$5</li>
+                            <li>$10</li>
+                            <li>$25</li>
+                            <li>$100</li>
+                        </ul>
+                    </div>
+                    <p>Choisissez votre méthode de paiement</p>
+                    <div class="payment">
+                        <p class="pay">Paypal</p>
+                        <img class="paypal" src="img/paypal.png" alt="">
+                        <p class="pay">Stripe</p>
+                        <p class="pay">Carte de crédit</p>
+                    </div>
+                    <button type="button">donner</button>
+                </div>
+                <div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
 
+        <div class="social">
+            <p>
+                <span>suivez-nous:</span>
+                <a href="https://www.facebook.com/p/MEJ-BENIN-100084518404105/"><span class="fa fa-facebook"></span></a>
+                <a href=""><span class="fa fa-instagram"></span></a>
+                <a href=""><span class="fa fa-whatsapp"></span></a>
+            </p>
+        </div>
     </main>
     <footer>
         <div class="copyright">
