--- a/EP3/contact.html
+++ b/EP3/contact.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Playwrite+DK+Uloopet:wght@100..400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Playwrite+DK+Uloopet:wght@100..400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/contact.css">
@@ -38,6 +39,39 @@
         </div>
     </header>
     <main>
+        <div>
+            <h1>Contacte</h1>
+            <p>
+                Comme à la fais hier camembert. Raison du coup quelque du coup et paf le chien fromage merde un
+                bière. Ou du coup nous fais chier je putain fromage grève du coup et paf le chien. Camembert épicé
+                omelette quelque merde où car et aussi car disruptif évidemment. Le client est très important merci,
+                le client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la
+                vallée veut la sauce.
+            </p>
+            <h2>MEJ Benin</h2>
+            <div class="info-contact">
+                <div class="links">
+                    <ul>
+                        <li>Adresse</li>
+                        <li>Téléphone</li>
+                        <li>Email</li>
+                        <li>Facebook</li>
+                        <li>Whatsapp</li>
+                    </ul>
+                    <ul>
+                        <li><address><a href="#">BP 46 Comé Dogbo, Benin</a></address></li>
+                        <li><a href="#">+229 67 06 75 77</a></li>
+                        <li><a href="mailto:directionmejb@gmail.com">directionmejb@gmail.com</a></li>
+                        <li><a href="https://www.facebook.com/p/MEJ-BENIN-100084518404105/">https://www.facebook.com/profile.php?id=123</a></li>
+                        <li><a href="https://wa.me/+22967067577">https://wa.me/+22967067577</a></li>
+                    </ul>
+                </div>
+                <div><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2355.6477820515656!2d1.7866528657714658!3d6.804901103292279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sBP%2046%20%20Dogbo%2C%20Benin!5e0!3m2!1sfr!2sbe!4v1723582472066!5m2!1sfr!2sbe"
+                        width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            </div>
+        </div>
         <div class="support">
             <div>
                 <h1>Question, suggestion...?</h1>
@@ -115,7 +149,9 @@
     </main>
     <footer>
         <div class="copyright">
-            <div><p>@copyright MEJ Benin - 2024</p></div>
+            <div>
+                <p>@copyright MEJ Benin - 2024</p>
+            </div>
             <div><a href="#">mentions légales et gestions des cookies</a></div>
         </div>
     </footer>
