--- a/EP3/contact.html
+++ b/EP3/contact.html
@@ -48,15 +48,15 @@
                 le client sera suivi par le client. Énée n'a pas de justice, pas de résultat, pas de ligula, et la
                 vallée veut la sauce.
             </p>
-            <h2>MEJ Benin</h2>
+            <h3>MEJ Benin</h3>
             <div class="info-contact">
                 <div class="links">
-                    <ul>
-                        <li>Adresse</li>
-                        <li>Téléphone</li>
-                        <li>Email</li>
-                        <li>Facebook</li>
-                        <li>Whatsapp</li>
+                    <ul class="logos">
+                        <li><span class="fa fa-compass"></span>Adresse</li>
+                        <li><span class="fa fa-phone"></span>Téléphone</li>
+                        <li><span class="fa fa-at"></span>Email</li>
+                        <li><span class="fa fa-facebook">Facebook</li>
+                        <li><span class="fa fa-whatsapp"></span>Whatsapp</li>
                     </ul>
                     <ul>
                         <li><address><a href="#">BP 46 Comé Dogbo, Benin</a></address></li>
